src/compiler/parse/snapshots/rlox__compiler__parse__parser__tests__calls_and_other_operator.snap
---
source: src/compiler/parse/parser.rs
expression: "crate::common::test_util::mock_parse(\"\n        fun foo() {\n            return 1;\n        }\n        print foo() + foo();\n        \")"
---
ast:
((defun foo()((return 1)
))
 (print (+ (foo ()) (foo ())))
)


