src/compiler/parse/snapshots/rlox__compiler__parse__parser__tests__complex_arithmetic.snap
---
source: src/compiler/parse/parser.rs
expression: "crate::common::test_util::mock_parse(\"print 20 * 5 / 0.5 - 100.0;\")"
---
ast:
print (((20 * 5) / 0.5) - 100);



