src/compiler/parse/snapshots/rlox__compiler__parse__parser__tests__div_0.snap
---
source: src/compiler/parse/parser.rs
expression: "crate::common::test_util::mock_parse(\"print 1 / 0;\")"
---
ast:
print (1 / 0);



