src/compiler/parse/snapshots/rlox__compiler__parse__parser__tests__missing_lhs.snap
---
source: src/compiler/parse/parser.rs
expression: "crate::common::test_util::mock_parse(\"print + 1;\\n\")"
---
stderr:
Error: Parse error
   ╭─[<unknown>:?:?]
   │
 1 │ print + 1;
   │       ┬  
   │       ╰── Expected primary
───╯


