src/compiler/parse/snapshots/rlox__compiler__parse__parser__tests__nested_parens.snap
---
source: src/compiler/parse/parser.rs
expression: "crate::common::test_util::mock_parse(\"print ((1) / (1 + (1 / 0.5)) * 3);\")"
---
ast:
((print (* (/ 1 (+ 1 (/ 1 0.5))) 3))
)


