src/compiler/parse/snapshots/rlox__compiler__parse__parser__tests__parens.snap
---
source: src/compiler/parse/parser.rs
expression: "crate::common::test_util::mock_parse(\"print 2 * (6 + 1) / (2) -- 100;\")"
---
ast:
((print (- (/ (* 2 (+ 6 1)) 2) (- 100)))
)


