src/compiler/parse/snapshots/rlox__compiler__parse__parser__tests__unary.snap
---
source: src/compiler/parse/parser.rs
expression: "crate::common::test_util::mock_parse(\"print -1 - -2 == --1 == true;\")"
---
ast:
((print (== (== (- (- 1) (- 2)) (- (- 1))) true))
)


